Updated permalinks in releases posts

--- a/_posts/2011-06-13-simpleid-0.8.md
+++ b/_posts/2011-06-13-simpleid-0.8.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8
+permalink: /releases/simpleid-0.8/
 title: SimpleID 0.8 released
 date: 2011-06-13 13:34:46
 categories: release
