--- a/_posts/2014-04-18-simpleid-0.9.md
+++ b/_posts/2014-04-18-simpleid-0.9.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.9
+permalink: /releases/simpleid-0.9/
 title: SimpleID 0.9 released
 date: 2014-04-18 09:27:40
 categories: release
