--- a/_posts/2014-11-15-simpleid-0.9.1.md
+++ b/_posts/2014-11-15-simpleid-0.9.1.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.9.1
+permalink: /releases/simpleid-0.9.1/
 title: SimpleID 0.9.1 released
 date: 2014-11-15 22:07:23
 categories: release
