--- a/_posts/2016-03-26-simpleid-1.0.1.md
+++ b/_posts/2016-03-26-simpleid-1.0.1.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-1.0.1
+permalink: /releases/simpleid-1.0.1/
 title: SimpleID 1.0.1 released
 categories: release
 release_version: '1.0.1'
