--- a/_posts/2008-10-24-simpleid-0.6.md
+++ b/_posts/2008-10-24-simpleid-0.6.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.6
+permalink: /releases/simpleid-0.6/
 title: SimpleID 0.6 released
 date: 2008-10-24 19:55:00
 categories: release
