--- a/_posts/2009-10-03-simpleid-0.7.md
+++ b/_posts/2009-10-03-simpleid-0.7.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7
+permalink: /releases/simpleid-0.7/
 title: SimpleID 0.7 released
 date: 2009-10-03 21:57:05
 categories: release
