--- a/_posts/2010-01-07-simpleid-0.7.1.md
+++ b/_posts/2010-01-07-simpleid-0.7.1.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.1
+permalink: /releases/simpleid-0.7.1/
 title: SimpleID 0.7.1 released
 date: 2010-01-07 11:00:00
 categories: release
