--- a/_posts/2010-04-02-simpleid-0.7.2.md
+++ b/_posts/2010-04-02-simpleid-0.7.2.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.2
+permalink: /releases/simpleid-0.7.2/
 title: SimpleID 0.7.2 released
 date: 2010-04-02 10:48:25
 categories: release
