--- a/_posts/2010-07-06-simpleid-0.7.3.md
+++ b/_posts/2010-07-06-simpleid-0.7.3.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.3
+permalink: /releases/simpleid-0.7.3/
 title: SimpleID 0.7.3 released
 date: 2010-07-06 20:53:14
 categories: release
