--- a/_posts/2010-07-10-simpleid-0.7.4.md
+++ b/_posts/2010-07-10-simpleid-0.7.4.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.4
+permalink: /releases/simpleid-0.7.4/
 title: SimpleID 0.7.4 released
 date: 2010-07-10 15:00:48
 categories: release
