--- a/_posts/2010-11-20-simpleid-0.7.5.md
+++ b/_posts/2010-11-20-simpleid-0.7.5.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.5
+permalink: /releases/simpleid-0.7.5/
 title: SimpleID 0.7.5 released
 date: 2010-11-20 13:24:21
 categories: release
