--- a/_posts/2011-04-12-simpleid-0.7.6.md
+++ b/_posts/2011-04-12-simpleid-0.7.6.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.7.6
+permalink: /releases/simpleid-0.7.6/
 title: SimpleID 0.7.6 released
 date: 2011-04-12 06:58:30
 categories: release
