--- a/_posts/2012-01-26-simpleid-0.8.1.md
+++ b/_posts/2012-01-26-simpleid-0.8.1.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8.1
+permalink: /releases/simpleid-0.8.1/
 title: SimpleID 0.8.1 released
 date: 2012-01-26 09:59:07
 categories: release
