--- a/_posts/2012-11-30-simpleid-0.8.2.md
+++ b/_posts/2012-11-30-simpleid-0.8.2.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8.2
+permalink: /releases/simpleid-0.8.2/
 title: SimpleID 0.8.2 released
 date: 2012-11-30 19:55:42
 categories: release
