--- a/_posts/2012-12-31-simpleid-0.8.3.md
+++ b/_posts/2012-12-31-simpleid-0.8.3.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8.3
+permalink: /releases/simpleid-0.8.3/
 title: SimpleID 0.8.3 released
 date: 2012-12-31 09:12:06
 categories: release
