--- a/_posts/2013-06-09-simpleid-0.8.4.md
+++ b/_posts/2013-06-09-simpleid-0.8.4.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8.4
+permalink: /releases/simpleid-0.8.4/
 title: Simple 0.8.4 released
 date: 2013-06-09 10:36:53
 categories: release
