--- a/_posts/2013-12-13-simpleid-0.8.5.md
+++ b/_posts/2013-12-13-simpleid-0.8.5.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-0.8.5
+permalink: /releases/simpleid-0.8.5/
 title: Simple 0.8.5 released
 date: 2013-12-13 16:51:49
 categories: release
