--- a/_posts/2015-10-10-simpleid-1.0.md
+++ b/_posts/2015-10-10-simpleid-1.0.md
@@ -1,6 +1,6 @@
 ---
 layout: release
-permalink: /releases/simpleid-1.0
+permalink: /releases/simpleid-1.0/
 title: SimpleID 1.0 released
 date: 2015-10-10 01:00:00
 categories: release
