Changed domain in donate page

--- a/_posts/2013-06-09-simpleid-0.8.4.md
+++ b/_posts/2013-06-09-simpleid-0.8.4.md
@@ -46,6 +46,6 @@ for upgrade instructions.
 
 If you enjoy using SimpleID, please consider making a donation to support the
 ongoing development work.  To find out more on how to donate, visit
-the [donation page](http://simpleid.koinic.net/donate).
+the [donation page](http://simpleid.org/donate).
 
 Your donation is very much appreciated.
