Preparing for Releases API

--- a/_posts/2011-06-13-simpleid-0.8.md
+++ b/_posts/2011-06-13-simpleid-0.8.md
@@ -6,6 +6,7 @@ date: 2011-06-13 13:34:46
 categories: release
 release_version: '0.8'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.8
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.tar.gz
