--- a/_posts/2012-01-26-simpleid-0.8.1.md
+++ b/_posts/2012-01-26-simpleid-0.8.1.md
@@ -6,6 +6,7 @@ date: 2012-01-26 09:59:07
 categories: release
 release_version: '0.8.1'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.8.1
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.1.tar.gz
