--- a/_posts/2013-06-09-simpleid-0.8.4.md
+++ b/_posts/2013-06-09-simpleid-0.8.4.md
@@ -6,6 +6,7 @@ date: 2013-06-09 10:36:53
 categories: release
 release_version: '0.8.4'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.8.4
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.4.tar.gz
