--- a/_posts/2014-04-18-simpleid-0.9.md
+++ b/_posts/2014-04-18-simpleid-0.9.md
@@ -6,6 +6,7 @@ date: 2014-04-18 09:27:40
 categories: release
 release_version: '0.9'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.9
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.9.tar.gz
