--- a/_posts/2016-03-26-simpleid-1.0.1.md
+++ b/_posts/2016-03-26-simpleid-1.0.1.md
@@ -5,6 +5,7 @@ title: SimpleID 1.0.1 released
 categories: release
 release_version: '1.0.1'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 1.0.1
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-1.0.1.tar.gz
