--- a/_posts/2008-10-24-simpleid-0.6.md
+++ b/_posts/2008-10-24-simpleid-0.6.md
@@ -6,6 +6,7 @@ date: 2008-10-24 19:55:00
 categories: release
 release_version: '0.6'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.6
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.6.5.tar.gz
