--- a/_posts/2009-10-03-simpleid-0.7.md
+++ b/_posts/2009-10-03-simpleid-0.7.md
@@ -6,6 +6,7 @@ date: 2009-10-03 21:57:05
 categories: release
 release_version: '0.7'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.7
 download_url: http://sourceforge.net/projects/simpleid/files/simpleid/0.7/simpleid-0.7.tar.gz/download
