--- a/_posts/2010-01-07-simpleid-0.7.1.md
+++ b/_posts/2010-01-07-simpleid-0.7.1.md
@@ -6,6 +6,7 @@ date: 2010-01-07 11:00:00
 categories: release
 release_version: '0.7.1'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.7.1
 download_url: http://download.sourceforge.net/simpleid/simpleid-0.7.1.tar.gz
