--- a/_posts/2011-04-12-simpleid-0.7.6.md
+++ b/_posts/2011-04-12-simpleid-0.7.6.md
@@ -6,6 +6,7 @@ date: 2011-04-12 06:58:30
 categories: release
 release_version: '0.7.6'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.7.6
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.7.6.tar.gz
