--- a/_posts/2012-12-31-simpleid-0.8.3.md
+++ b/_posts/2012-12-31-simpleid-0.8.3.md
@@ -6,6 +6,7 @@ date: 2012-12-31 09:12:06
 categories: release
 release_version: '0.8.3'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.8.3
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.3.tar.gz
