--- a/_posts/2014-11-15-simpleid-0.9.1.md
+++ b/_posts/2014-11-15-simpleid-0.9.1.md
@@ -6,6 +6,7 @@ date: 2014-11-15 22:07:23
 categories: release
 release_version: '0.9.1'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 0.9.1
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.9.1.tar.gz
