--- a/_posts/2015-10-10-simpleid-1.0.md
+++ b/_posts/2015-10-10-simpleid-1.0.md
@@ -6,6 +6,7 @@ date: 2015-10-10 01:00:00
 categories: release
 release_version: '1.0'
 release_package: simpleid
+package_series: '1.x'
 tags: simpleid
 download_title: Download SimpleID 1.0
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-1.0.tar.gz
