--- a/_posts/2009-08-25-sa-2009-1.md
+++ b/_posts/2009-08-25-sa-2009-1.md
@@ -3,7 +3,7 @@ layout: advisory
 permalink: /advisories/sa-2009-1
 title: Security advisory SA-2009-1 - Cross site scripting vulnerability
 date: 2009-08-25 22:09:44
-categories: advisory
+tags: advisory
 advisory_id: SA-2009-1
 advisory_version: < 0.6.5
 advisory_risk: Critical
