--- a/_posts/2010-01-07-simpleid-0.7.1.md
+++ b/_posts/2010-01-07-simpleid-0.7.1.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.7.1/
 title: SimpleID 0.7.1 released
 date: 2010-01-07 11:00:00
-categories: release
+tags: release
 release_version: '0.7.1'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.7.1
 download_url: http://download.sourceforge.net/simpleid/simpleid-0.7.1.tar.gz
 release_type: 
