--- a/_posts/2010-07-06-simpleid-0.7.3.md
+++ b/_posts/2010-07-06-simpleid-0.7.3.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.7.3/
 title: SimpleID 0.7.3 released
 date: 2010-07-06 20:53:14
-categories: release
+tags: release
 release_version: '0.7.3'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.7.3
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.7.3.tar.gz
 release_type: 
