--- a/_posts/2011-04-12-sa-2011-1.md
+++ b/_posts/2011-04-12-sa-2011-1.md
@@ -3,7 +3,7 @@ layout: advisory
 permalink: /advisories/sa-2011-1
 title: Security advisory SA-2011-1 - Directory traversal vulnerability
 date: 2011-04-12 06:58:04
-categories: advisory
+tags: advisory
 advisory_id: SA-2011-1
 advisory_version: < 0.7.6
 advisory_risk: Moderately critical
