--- a/_posts/2013-06-09-simpleid-0.8.4.md
+++ b/_posts/2013-06-09-simpleid-0.8.4.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.8.4/
 title: Simple 0.8.4 released
 date: 2013-06-09 10:36:53
-categories: release
+tags: release
 release_version: '0.8.4'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.8.4
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.4.tar.gz
 release_type: 
