--- a/_posts/2014-04-09-sa-2014-1.md
+++ b/_posts/2014-04-09-sa-2014-1.md
@@ -3,7 +3,7 @@ layout: advisory
 permalink: /advisories/sa-2014-1
 title: Security Advisory SA-2014-1 - OpenSSL "Heartbleed" vulnerability (CVE-2014-0160)
 date: 2014-04-09 23:18:43
-categories: advisory
+tags: advisory
 advisory_id: SA-2014-1
 advisory_version: all versions
 advisory_risk: Highly critical
