--- a/_posts/2014-04-18-simpleid-0.9.md
+++ b/_posts/2014-04-18-simpleid-0.9.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.9/
 title: SimpleID 0.9 released
 date: 2014-04-18 09:27:40
-categories: release
+tags: release
 release_version: '0.9'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.9
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.9.tar.gz
 release_type: 
