--- a/_posts/2015-10-10-simpleid-1.0.md
+++ b/_posts/2015-10-10-simpleid-1.0.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-1.0/
 title: SimpleID 1.0 released
 date: 2015-10-10 01:00:00
-categories: release
+tags: release
 release_version: '1.0'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 1.0
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-1.0.tar.gz
 release_type: 
