--- a/_posts/2019-01-01-github.md
+++ b/_posts/2019-01-01-github.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Migration of primary source repository to Github
-categories: ["news"]
+tags: ["news"]
 ---
 Since the beginning, [Sourceforge](https://sourceforge.net/projects/simpleid/)
 has been used as the SimpleID project's main host, including its source
