--- a/_posts/2010-04-02-simpleid-0.7.2.md
+++ b/_posts/2010-04-02-simpleid-0.7.2.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.7.2/
 title: SimpleID 0.7.2 released
 date: 2010-04-02 10:48:25
-categories: release
+tags: release
 release_version: '0.7.2'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.7.2
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.7.2.tar.gz
 release_type: 
