--- a/_posts/2010-07-10-simpleid-0.7.4.md
+++ b/_posts/2010-07-10-simpleid-0.7.4.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.7.4/
 title: SimpleID 0.7.4 released
 date: 2010-07-10 15:00:48
-categories: release
+tags: release
 release_version: '0.7.4'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.7.4
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.7.4.tar.gz
 release_type: 
