--- a/_posts/2010-11-20-simpleid-0.7.5.md
+++ b/_posts/2010-11-20-simpleid-0.7.5.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.7.5/
 title: SimpleID 0.7.5 released
 date: 2010-11-20 13:24:21
-categories: release
+tags: release
 release_version: '0.7.5'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.7.5
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.7.5.tar.gz
 release_type: 
