--- a/_posts/2012-01-26-simpleid-0.8.1.md
+++ b/_posts/2012-01-26-simpleid-0.8.1.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.8.1/
 title: SimpleID 0.8.1 released
 date: 2012-01-26 09:59:07
-categories: release
+tags: release
 release_version: '0.8.1'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.8.1
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.1.tar.gz
 release_type: 
