--- a/_posts/2012-11-30-simpleid-0.8.2.md
+++ b/_posts/2012-11-30-simpleid-0.8.2.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.8.2/
 title: SimpleID 0.8.2 released
 date: 2012-11-30 19:55:42
-categories: release
+tags: release
 release_version: '0.8.2'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.8.2
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.2.tar.gz
 release_type: 
