--- a/_posts/2012-12-31-simpleid-0.8.3.md
+++ b/_posts/2012-12-31-simpleid-0.8.3.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.8.3/
 title: SimpleID 0.8.3 released
 date: 2012-12-31 09:12:06
-categories: release
+tags: release
 release_version: '0.8.3'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.8.3
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.3.tar.gz
 release_type: 
