--- a/_posts/2013-12-13-simpleid-0.8.5.md
+++ b/_posts/2013-12-13-simpleid-0.8.5.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.8.5/
 title: Simple 0.8.5 released
 date: 2013-12-13 16:51:49
-categories: release
+tags: release
 release_version: '0.8.5'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.8.5
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.8.5.tar.gz
 release_type: 
