--- a/_posts/2014-11-15-simpleid-0.9.1.md
+++ b/_posts/2014-11-15-simpleid-0.9.1.md
@@ -3,11 +3,10 @@ layout: release
 permalink: /releases/simpleid-0.9.1/
 title: SimpleID 0.9.1 released
 date: 2014-11-15 22:07:23
-categories: release
+tags: release
 release_version: '0.9.1'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 0.9.1
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-0.9.1.tar.gz
 release_type: 
