--- a/_posts/2016-12-27-simpleid-1.0.2.md
+++ b/_posts/2016-12-27-simpleid-1.0.2.md
@@ -2,11 +2,10 @@
 layout: release
 permalink: /releases/simpleid-1.0.2/
 title: SimpleID 1.0.2 released
-categories: release
+tags: release
 release_version: '1.0.2'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 1.0.2
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-1.0.2.tar.gz
 release_type: 
