--- a/_posts/2020-09-21-simpleid-1.0.3.md
+++ b/_posts/2020-09-21-simpleid-1.0.3.md
@@ -2,11 +2,10 @@
 layout: release
 permalink: /releases/simpleid-1.0.3/
 title: SimpleID 1.0.3 released
-categories: release
+tags: release
 release_version: '1.0.3'
 release_package: simpleid
 package_series: '1.x'
-tags: simpleid
 download_title: Download SimpleID 1.0.3
 download_url: http://downloads.sourceforge.net/simpleid/simpleid-1.0.3.tar.gz
 release_type: 
