Fix syntax highlighting

--- a/_posts/2008-10-24-simpleid-0.6.md
+++ b/_posts/2008-10-24-simpleid-0.6.md
@@ -41,7 +41,9 @@ release_type:
 point below.</p></li>
 <li><p>By default, SimpleID version 0.6 will not accept logins under the legacy system.  You can override this by putting the following line in your config.inc:</p>
 
-{% highlight php %}define('SIMPLEID_ALLOW_LEGACY_LOGIN', true);{% endhighlight %}
+```php
+define('SIMPLEID_ALLOW_LEGACY_LOGIN', true);
+```
 
 <p>It is STRONGLY RECOMMENDED that you DO NOT switch the legacy login system on, as it is substantially less secure than the new login system.  Use this ONLY if your browser does not support JavaScript.</p></li>
 </ol>
