--- a/_posts/2009-08-25-sa-2009-1.md
+++ b/_posts/2009-08-25-sa-2009-1.md
@@ -1,6 +1,6 @@
 ---
 layout: advisory
-permalink: /advisories/sa-2009-1
+permalink: /advisories/sa-2009-1/
 title: Security advisory SA-2009-1 - Cross site scripting vulnerability
 date: 2009-08-25 22:09:44
 tags: advisory
