--- a/_posts/2011-04-12-sa-2011-1.md
+++ b/_posts/2011-04-12-sa-2011-1.md
@@ -1,6 +1,6 @@
 ---
 layout: advisory
-permalink: /advisories/sa-2011-1
+permalink: /advisories/sa-2011-1/
 title: Security advisory SA-2011-1 - Directory traversal vulnerability
 date: 2011-04-12 06:58:04
 tags: advisory
