--- a/_posts/2014-04-09-sa-2014-1.md
+++ b/_posts/2014-04-09-sa-2014-1.md
@@ -1,6 +1,6 @@
 ---
 layout: advisory
-permalink: /advisories/sa-2014-1
+permalink: /advisories/sa-2014-1/
 title: Security Advisory SA-2014-1 - OpenSSL "Heartbleed" vulnerability (CVE-2014-0160)
 date: 2014-04-09 23:18:43
 tags: advisory
