Remove extra files from collection

--- a/404.md
+++ b/404.md
@@ -3,6 +3,7 @@ title: Not Found
 layout: page
 permalink: /404.html
 lunr_exclude: true
+eleventyExcludeFromCollections: true
 ---
 
 The page you are looking for cannot be found. It might have been moved, had its name changed, or is temporarily unavailable.
